tests/errors/iterable-trait-arity.ari
impl Iterable for i64 {
}

fn main() -> i64 {
  return 0;
}
